# hifi

./: BUILD.md  BUILD_LINUX.md  BUILD_OSX.md  BUILD_UWP.md  BUILD_WIN.md  CMakeLists.txt  make UWP.bat  make WIN.bat  qfloat16.h
assignment-client/: CMakeLists.txt
assignment-client/src/: Agent.h
cmake/macros/: AutoScribeShader.cmake  LinkHifiLibraries.cmake  PackageLibrariesForDeployment.cmake  SetupHifiProject.cmake  SetupQt.cmake  TargetNsight.cmake
cmake/modules/: FindBullet.cmake  FindGLM.cmake  FindOpenSSL.cmake
cmake/templates/: NSIS.template.in
interface/: CMakeLists.txt
interface/src/: Application.cpp  Application.h  CrashReporter.cpp  DiscoverabilityManager.cpp  DiscoverabilityManager.h  Menu.cpp  SpeechRecognizer.cpp  SpeechRecognizer.h  main.cpp
libraries/animation/: CMakeLists.txt
libraries/avatars/: CMakeLists.txt
libraries/avatars-renderer/: CMakeLists.txt
libraries/controllers/: CMakeLists.txt
libraries/display-plugins/: CMakeLists.txt
libraries/display-plugins-gl/: CMakeLists.txt
libraries/entities-renderer/: CMakeLists.txt
libraries/shared/: CMakeLists.txt
libraries/shared/src/: BaseScriptEngine.cpp  BaseScriptEngine.h  CPUIdent.h  GeometryUtil.cpp  PickFilter.h  PointerEvent.cpp  PointerEvent.h  RegisteredMetaTypes.cpp  RegisteredMetaTypes.h  ScriptValueUtils.h  SharedUtil.cpp  SharedUtil.h  Transform.h  VariantMapToScriptValue.h  myScript.h
libraries/shared/src/shared/: FileUtils.cpp  NsightHelpers.cpp  ScriptHelpers.cpp  ScriptHelpers.h  bitset
plugins/: CMakeLists.txt
tests/uwp/: uwp.pro  (+1 more)
tools/: CMakeLists.txt
(+262 files in other folders)
